# auth-test-ai

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: README.md
ai-testing/: README.md
backend/: README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: f102fc8ed43d_initial_authentication_schema.py
backend/src/auth_test_ai/: __init__.py  authorization.py  cli.py  config.py  csrf.py  errors.py  extensions.py  models.py
backend/src/auth_test_ai/api/: admin.py  auth.py  docs.py  health.py
backend/src/auth_test_ai/services/: audit_service.py  authentication_service.py  lockout_service.py  password_service.py  session_service.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/integration/: test_admin_api.py  test_auth_api.py  test_migrations.py
backend/tests/unit/: test_api_docs.py  test_config.py  test_domain.py  test_password_service.py
docs/: architecture.md
docs/decisions/: 0001-monorepo.md  0002-angular-flask-postgresql.md  0003-authentication-session-strategy.md  0004-robot-framework.md  0005-ai-human-in-the-loop.md  0006-github-actions.md
docs/demo/: swagger-demo.md
docs/design/: api-contract.md  data-model.md  use-cases.md
docs/openapi/: auth-test-ai.openapi.yaml
docs/project/: backlog.md  supervisor-questions.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md
docs/security/: threat-model.md
docs/testing/: test-strategy.md  traceability-matrix.md
frontend/: angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json
frontend/public/: .gitkeep
frontend/src/: index.html  main.ts  styles.scss
infra/: README.md
robot-tests/: requirements.txt
robot-tests/api/: README.md
scripts/: validate_docs.py  validate_openapi.py
(+10 files in other folders)
