[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-test-ai"
version = "0.1.0"
description = "Secure authentication testing API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1,<4",
    "Flask-Limiter[redis]>=3.12,<5",
    "Flask-Migrate>=4.1,<5",
    "Flask-Session>=0.8,<0.9",
    "Flask-SQLAlchemy>=3.1,<4",
    "argon2-cffi>=23.1,<26",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6.0.2,<7",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "pytest-mock>=3.14,<4",
    "freezegun>=1.5,<2",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
markers = [
    "unit: isolated unit tests",
    "integration: tests requiring the dedicated PostgreSQL test database",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
